--- a/html/themes/custom/common_design_subtheme/css/brand.css
+++ b/html/themes/custom/common_design_subtheme/css/brand.css
@@ -12,7 +12,9 @@
   --brand-primary--light: var(--cd-blue--brighter);
   --brand-primary--dark: #144372;
   --brand-highlight: #E56A54;
-  --brand-highlight-contrast: #0B2641;
+  /* https: //polypane.app/color-contrast/#fg=%23fff&bg=%23E56A54&level=aa&format=hex&algo=WCAG2&filter=none */
+  /* --brand-highlight: #d64200; */
+  --brand-highlight-contrast: #000000;
   --brand-grey: #f5f5f5;
   --brand-grey--border: #ccc;
   --brand-grey--text: #00000080;
